# archdata

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  USAGE.md
src/: config.py  pipeline.py
src/models/: alignment.py  augmentation.py  conversation.py  intent.py  policy.py
src/phase1/: data_processor.py  llm1_policy_generator.py  llm2_conversation_synthesizer.py  llm3_alignment_evaluator.py
src/phase2/: augmentation_module.py
src/prompts/: llm1_policy_generator.py  llm2_conversation_synthesizer.py  llm3_alignment_evaluator.py  phase2_paraphrase.py
src/utils/: conversation_formatter.py
tests/: test_data_processor.py  test_llm1_policy_generator.py  test_llm2_conversation_synthesizer.py  test_llm3_alignment_evaluator.py  test_phase2_augmentation.py
